<resources>
    <string name="app_name">ProductAdder</string>
    <string name="product_general_information">Product general information:</string>
    <string name="name_hint">Name</string>
    <string name="category_hint">Category</string>
    <string name="product_description_optional_hint">Product description (Optional)</string>
    <string name="price_hint">Price</string>
    <string name="offer_percentage_optional_hint">Offer Percentage (Optional)</string>
    <string name="product_details">Product details:</string>
    <string name="sizes_optional_use_between_each_new_size_hint">Sizes (Optional) | use , between each new size</string>
    <string name="button_colors_text">Colors</string>
    <string name="button_images_text">Images</string>
</resources>